--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,15 +18,10 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^6.2.6"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild"
-		]
-	},
-	"dependencies": {
+		"vite": "^6.3.5",
 		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/adapter-static": "^3.0.8"
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@tailwindcss/vite": "^4.1.6",
+		"tailwindcss": "^4.1.6"
 	}
 }
